; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_remote.c_refspec_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_remote.c_refspec_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.refspec_cb_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*)* @refspec_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @refspec_cb(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.refspec_cb_data*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.refspec_cb_data*
  store %struct.refspec_cb_data* %7, %struct.refspec_cb_data** %5, align 8
  %8 = load %struct.refspec_cb_data*, %struct.refspec_cb_data** %5, align 8
  %9 = getelementptr inbounds %struct.refspec_cb_data, %struct.refspec_cb_data* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.refspec_cb_data*, %struct.refspec_cb_data** %5, align 8
  %15 = getelementptr inbounds %struct.refspec_cb_data, %struct.refspec_cb_data* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @add_refspec(i32 %10, i32 %13, i32 %16)
  ret i32 %17
}

declare dso_local i32 @add_refspec(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
